--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>SB Admin</title>
+        <title>Identity Money</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="favicon.png" />
     </head>
     <body>
         <app-root></app-root>
+        <div id="app"></div>
     </body>
 </html>
